--- a/PersonalWebsiteCSS.css
+++ b/PersonalWebsiteCSS.css
@@ -3,42 +3,69 @@
      #44A1A0 
      #78CDD7 
      #247B7B */
-nav{
-    text-align: right;
 
+body {
+    padding-top: 60px;
 }
 
-#Summary_and_image{
+@media (max-width: 979px) { /* Prevents stuff from being covered by navbar*/
+    body {
+        padding-top: 0px;
+    }
+}
+
+
+nav {
+    text-align: right;
+}
+
+#Summary_and_image {
     display: flex;
 }
-#Summary{
+
+#Summary {
     display: inline-block;
     width: 66%;
 }
+
 #Personal_Image {
     padding: 2px;
     width: 33%;
     word-wrap: break-word;
+    max-width: 250px;
+    max-height: 250px;
 }
-#Header{
+
+#My_Image {
+    justify-content: flex-end;
+    max-width: 100%;
+    max-height: 100%;
+}
+
+#Header {
     display: inline-block;
     width: 100%;
     background-color: lightgrey;
     height: 100px;
 }
-#About_Me{
+
+#About_Me {
     text-align: center;
 }
-#My_Name{
+
+#My_Name {
     margin: auto;
 }
+
 #Left_Block {
     display: inline-block;
-    background-color: lightseagreen;
+    background-color: #44A1A0;
     width: 15%;
 }
-#Center_Block{
+
+#Center_Block {
     display: inline-block;
     width: 84%;
     margin-left: -3px;
+    background-color: #78CDD7;
 }
