--- a/PersonalWebsiteCSS.css
+++ b/PersonalWebsiteCSS.css
@@ -3,7 +3,7 @@
      #44A1A0 
      #78CDD7 
      #247B7B */
-
+/* This literally just exists to make the navbar not cover my name*/
 body {
     padding-top: 60px;
 }
